@@ -33,6 +33,7 @@ dnl --------------------------------------------------------------------------
 
 AC_PROG_INSTALL
 PKG_PROG_PKG_CONFIG
+MP_PROG_XMLLINT
 MP_PROG_XSLTPROC
 
 dnl --------------------------------------------------------------------------
